Rename to Thread::Lite
I had begun to complicate two separate concerns: lightweight threads and
future-based asynchrony.  This module should contain the former.
Another module will contain the latter.

--- a/Changes
+++ b/Changes
@@ -1,8 +1,5 @@
-Revision history for Sub-Future
+Revision history for Thread-Lite
 
-0.02    Sat Dec 12 04:10:36 UTC 2009
-        Include details about version control
-
-0.01    Sat Dec 12 04:05:33 UTC 2009
+0.01
         First version, released on an unsuspecting world.
 
